# src/routes/schedule.routes.js
@@ -3,7 +3,7 @@ import scheduleControllers from '../controllers/schedule.controllers.js';
 import fieldValidator from '../middlewares/fieldValidator.js';
 import tokenValidator from '../middlewares/tokenValidator.js';
 import roleValidator from '../middlewares/roleValidator.js';
-import { param } from 'express-validator';
+import { body, param } from 'express-validator';
 
 const router = Router();
 
@@ -11,26 +11,34 @@ router.post('/:professionalId', [
   tokenValidator,
   roleValidator(2),
   param('professionalId', 'PROFESSIONAL_ID_IS_REQUIRED').isInt({ min: 1 }),
-  //TODO: Resta validar parametros del cuerpo de la solicitud
+  body('dayOfWeek', 'DAY_OF_WEEK_IS_REQUIRED').isString(),
+  body('startTime', 'START_TIME_IS_REQUIRED').isTime(),
+  body('endTime', 'END_TIME_IS_REQUIRED').isTime(),
+  body('appointmentDuration', 'APPOINTMENT_DURATION_IS_REQUIRED').isInt({ min: 1 }),
   fieldValidator
 ], scheduleControllers.createProfessionalSchedule)
 
 router.get('/:professionalId', [
   tokenValidator,
-  param('professionalId', 'PROFESSIONAL_ID_IS_REQUIRED').isInt({ min: 1 }),
+  param('professionalId', 'PROFES SIONAL_ID_IS_REQUIRED').isInt({ min: 1 }),
   fieldValidator
 ], scheduleControllers.getProfessionalSchedules)
 
 router.delete('/:professionalScheduleId', [
   tokenValidator,
+  roleValidator(2),
   param('professionalScheduleId', 'PROFESSIONAL_SCHEDULE_ID_IS_REQUIRED').isInt({ min: 1 }),
   fieldValidator
 ], scheduleControllers.deleteProfessionalSchedule)
 
 router.post('/:professionalId/block', [
   tokenValidator,
+  roleValidator(2),
   param('professionalId', 'PROFESSIONAL_ID_IS_REQUIRED').isInt({ min: 1 }),
-  //TODO: Resta validar parametros del cuerpo de la solicitud
+  body('date', 'DATE_IS_REQUIRED').isDate(),
+  body('startTime', 'START_TIME_IS_REQUIRED').isTime(),
+  body('endTime', 'END_TIME_IS_REQUIRED').isTime(),
+  body('reason', 'REASON_IS_REQUIRED').isString(),
   fieldValidator
 ], scheduleControllers.createProfessionalScheduleBlock)
 
@@ -40,9 +48,10 @@ router.get('/:professionalId/block', [
   fieldValidator
 ], scheduleControllers.getProfessionalScheduleBlocks)
 
-router.delete('/:professionalScheduleBlockId', [
+router.delete('/:professionalScheduleBlockId/block', [
   tokenValidator,
-  param('blockId', 'BLOCK_ID_IS_REQUIRED').isInt({ min: 1 }),
+  roleValidator(2),
+  param('professionalScheduleBlockId', 'PROFESSIONAL_SCHEDULE_BLOCK_ID_IS_REQUIRED').isInt({ min: 1 }),
   fieldValidator
 ], scheduleControllers.deleteProfessionalScheduleBlock)
 
